module4-task1  - Pins and offer dialog panel were added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="pin  pin__main"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded"
                                            width="40" height="44"></div>
         </div>
-        <div id="offer-dialog" class="dialog">
+        <div id="offer-dialog" class="dialog is-hidden">
           <div class="dialog__title"><img src="img/avatars/user01.png" alt="Avatar" width="70" height="70">
             <a href="#" class="dialog__close"><img src="img/close.svg" alt="close" width="22"
                                                    height="22"></a>
@@ -283,11 +283,12 @@
         </div>
       </div>
     </template>
+    <script src="js/options.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/createPin.js"></script>
     <script src="js/renderPinToMap.js"></script>
     <script src="js/setOfferDialog.js"></script>
-    <script src="js/renderCurrentOfferDialog.js"></script>
+    <script src="js/OfferDialog.js"></script>
     <script src="js/generateNewDataPins.js"></script>
     <script src="js/map.js"></script>
   </body>
